--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
+    "dialogflow": "^1.2.0",
     "postcss": "^8.4.24",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react-chat-widget": "^3.0.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^4.0.0",
     "react-typical": "^0.1.3",
     "tailwindcss": "^3.3.2"
