--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "react": "^16.0.0",
     "react-chat-widget": "^3.0.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^4.0.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-slick": "^0.29.0",
     "react-typical": "^0.1.3",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
